# python-app-cicd-deployment

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
cicd_intro/: app.py  calculator_cli.py  web_scraper.py
flask-app/: Jenkinsfile  app.py
tests/: test_calculator.py  test_web_scraper.py
